--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,5 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "wagmi": "^0.11.5"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
