--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -19,6 +19,8 @@
 .DS_Store
 *.pem
 
+yarn.lock
+
 # debug
 npm-debug.log*
 yarn-debug.log*
@@ -26,7 +28,13 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
+
+# typescript
+*.tsbuildinfo
